<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/layout_margin"
    android:layout_marginStart="@dimen/layout_margin"
    android:layout_marginEnd="@dimen/layout_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/small_padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textAlignment="center"
        tools:text="Robinnsson Cifuentes Ramírez"
        style="@style/NameStyle" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/ed_bio"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:visibility="visible"
        style="@style/NameStyle"/>

    <Button
        android:id="@+id/done_button"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/bt_done"
        android:visibility="visible"
        android:onClick="addNewNickname"/>

    <TextView
        android:id="@+id/nickname_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:background="@color/teal_200"
        android:paddingBottom="@dimen/small_padding"
        tools:text="c2r"
        android:visibility="visible"
        style="@style/NameStyle"
        android:onClick="changeNickname"/>

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:contentDescription="@string/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/layout_margin"
        android:paddingStart="@dimen/layout_margin"
        android:paddingEnd="@dimen/layout_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bio_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:contentDescription="@string/yellow_star"
                app:srcCompat="@drawable/phone"/>

            <TextView
                android:id="@+id/bio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:lineSpacingMultiplier="1.2"
                style="@style/NameStyle"/>

        </LinearLayout>


    </ScrollView>



</LinearLayout>